some small issue fixes

--- a/design2.html
+++ b/design2.html
@@ -6,6 +6,6 @@
     <body class="bg-gradient-to-br from-[#3f63de] to-[#8c4ec5]">
         <div class="flex justify-center items-center h-screen text-white gap-4">
         <span class="text-xl font-semibold">First name</span>
-        <span class="border border-black rounded p-2 pr-32 text-xl bg-dark/15 border-opacity-40">Pedro Duarte</span></div>
+        <input class="border border-black/40 rounded p-2 w-60 text-xl bg-dark/15"></input></div>
     </body>
 </html>
