set up vite, styling of design 3

--- a/designs/design2.html
+++ b/designs/design2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="./output.css" rel="stylesheet">
+        <script type="module" src="/src/main.ts"></script>
     </head>
     <body class="bg-gradient-to-br from-[#3f63de] to-[#8c4ec5]">
         <div class="flex justify-center items-center h-screen text-white gap-4">
