--- a/designs/design3.html
+++ b/designs/design3.html
@@ -5,12 +5,12 @@
     </head>
     <body class="bg-black flex flex-col items-center justify-center">
         <div class="border rounded-lg border-gray-600 text-white">
-            <div class="grid grid-cols-2 gap-5 text-2xl">
+            <div class="grid gap-5 text-2xl grid-cols-[auto,auto] p-8">
                 <span class="flex justify-end items-center text-gray-400"
                     >Stand</span
                 >
                 <div
-                    class="bg-lightred border rounded-lg border-transparent h-16 w-64 flex items-center p-3"
+                    class="bg-lightred border rounded-lg border-transparent h-16 w-80 flex items-center p-3"
                 >
                     8/12 hr
                 </div>
@@ -26,7 +26,7 @@
                     >Move</span
                 >
                 <div
-                    class="bg-blue border rounded-lg border-transparent h-16 w-64 flex items-center p-3"
+                    class="bg-blue border rounded-lg border-transparent h-16 w-80 flex items-center p-3"
                 >
                     245/360 kcal
                 </div>
