deleted unneccessary border

--- a/designs/design3.html
+++ b/designs/design3.html
@@ -10,7 +10,7 @@
                     >Stand</span
                 >
                 <div
-                    class="bg-lightred border rounded-lg border-transparent h-16 w-80 flex items-center p-3"
+                    class="bg-lightred rounded-lg h-16 w-80 flex items-center p-3"
                 >
                     8/12 hr
                 </div>
@@ -18,16 +18,14 @@
                     >Exercise</span
                 >
                 <div
-                    class="bg-orange border rounded-lg border-transparent h-16 w-96 flex items-center p-3"
+                    class="bg-orange rounded-lg h-16 w-96 flex items-center p-3"
                 >
                     46/60 min
                 </div>
                 <span class="flex justify-end items-center text-gray-400"
                     >Move</span
                 >
-                <div
-                    class="bg-blue border rounded-lg border-transparent h-16 w-80 flex items-center p-3"
-                >
+                <div class="bg-blue rounded-lg h-16 w-80 flex items-center p-3">
                     245/360 kcal
                 </div>
             </div>
