--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <style>
-            body {
-                margin: 0;
-            }
-        </style>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + TS</title>
-    </head>
-    <body>
-        <iframe
-            src="/designs/design3.html"
-            style="width: 100%; height: 99vh; border: none"
-        ></iframe>
-    </body>
+  <head>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+    <script type="module" src="/src/main.tsx" defer></script>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
