change head div styling

--- a/designs/design4.html
+++ b/designs/design4.html
@@ -3,17 +3,17 @@
     <head>
         <script type="module" src="/src/main.ts"></script>
     </head>
-    <body class="bg-black">
+    <body class="bg-black flex justify-center items-center h-screen">
         <div class="flex flex-col gap-5 w-[650px]">
-            <div
-                class="grid rounded-lg bg-[#27272A] grid-cols-[auto,auto] text-2xl"
-            >
+            <div class="grid rounded-lg bg-[#27272A] grid-cols-2 text-2xl">
                 <div
-                    class="text-white rounded-lg bg-black py-1 px-8 m-2 flex items-center justify-center"
+                    class="text-white rounded-lg bg-black py-1 px-4 m-2 flex items-center justify-center"
                 >
                     Account
                 </div>
-                <div class="text-gray-400 flex items-center justify-center">
+                <div
+                    class="text-gray-400 flex items-center justify-center py-1 px-4 m-2"
+                >
                     Password
                 </div>
             </div>
