--- a/designs/design5.html
+++ b/designs/design5.html
@@ -14,8 +14,7 @@
                     Management and Insightful Analysis.
                 </p>
                 <div
-                    class="bg-white flex items-center justify-center p-2 rounded-lg"
-                    style="width: 30%"
+                    class="bg-white flex items-center justify-center p-2 rounded-lg w-40"
                 >
                     Create new Order
                 </div>
@@ -26,12 +25,8 @@
                 <p class="text-gray-400">This Week</p>
                 <p class="text-white text-4xl">$1,329</p>
                 <p class="text-gray-400">+25% from last week</p>
-                <div class="bg-[#151518] rounded-2xl"></div>
-                <div class="rounded-2xl bg-[#151518] h-4 w-full">
-                    <div
-                        class="rounded-2xl rounded-r-none bg-white h-4"
-                        style="width: 25%"
-                    ></div>
+                <div class="rounded-2xl bg-[#151518] h-4 overflow-hidden">
+                    <div class="bg-white h-4" style="width: 25%"></div>
                 </div>
             </div>
             <div
@@ -41,11 +36,8 @@
                 <p class="text-white text-4xl">$5,329</p>
                 <p class="text-gray-400">+10% from last month</p>
                 <div class="bg-[#151518] rounded-2xl"></div>
-                <div class="rounded-2xl bg-[#151518] h-4 w-full">
-                    <div
-                        class="rounded-2xl rounded-r-none bg-white h-4"
-                        style="width: 10%"
-                    ></div>
+                <div class="rounded-2xl bg-[#151518] h-4 overflow-hidden">
+                    <div class="bg-white h-4" style="width: 10%"></div>
                 </div>
             </div>
         </div>
