--- a/designs/design5.html
+++ b/designs/design5.html
@@ -6,18 +6,20 @@
     <body class="bg-[#151518] flex justify-center items-center h-screen">
         <div class="grid grid-cols-2 gap-4 w-[800px]">
             <div
-                class="bg-black border border-gray-700 rounded-lg flex flex-col gap-3 p-6 col-span-2 pr-52"
+                class="bg-black border border-gray-700 rounded-lg p-6 col-span-2 pr-52"
             >
-                <p class="text-white text-2xl font-semibold">Your Orders</p>
-                <p class="text-white">
+                <p class="text-white text-2xl font-semibold mb-2">
+                    Your Orders
+                </p>
+                <p class="text-white mb-2">
                     Introducing Our Dynamic Orders Dashboard for Seamless
                     Management and Insightful Analysis.
                 </p>
-                <div
-                    class="bg-white flex items-center justify-center p-2 rounded-lg w-40"
+                <button
+                    class="bg-white flex items-center justify-center p-2 rounded-lg"
                 >
                     Create new Order
-                </div>
+                </button>
             </div>
             <div
                 class="bg-black border border-gray-700 rounded-lg flex flex-col gap-3 p-6"
